# SurugaSeikiHex

./: .gitignore  README.md  origin.txt  origin2.txt  profile_20260625_131214.txt  profile_20260625_131247.txt  profile_20260625_131327.txt  profile_20260625_162758.txt  profile_20260625_162942.txt  profile_20260625_163012.txt  profile_20260625_163054.txt  profile_20260625_163111.txt  profile_20260625_163213.txt  pyproject.toml  sync.ffs_db
AUTOMAP/: FileChecker.ipynb  Final.ipynb  Playground.ipynb  SimuladorMovimiento.ipynb  automapTester.ipynb  automaper.py  automaperClass.py  chip_layout.xlsx  chip_layout_example.csv  chip_layout_example.xlsx  chip_layout_normalized.xlsx  chip_layout_normalized_bk.xlsx  testAutomaper.py  ~$chip_layout_normalized.xlsx
OSA/: LecturaParaDummies.ipynb  LecturaParaDummiesV2.ipynb  LecturaParaDummiesV3.ipynb  LecturaParaDummiesV4.ipynb  osa_simple.py
chipMaps/: SurugaTest.xlsx  SurugaTest01.xlsx  SurugaTest02.xlsx
data_osa/: medicion_001_20260714_163414_WG0.txt  medicion_001_20260714_163449_WG1.txt  medicion_001_20260714_163505_WG2.txt  medicion_001_20260714_163521_WG3.txt  medicion_001_20260714_164039_WG0.txt  medicion_001_20260714_164056_WG1.txt  medicion_001_20260714_164115_WG2.txt  medicion_001_20260714_164132_WG3.txt
profile_data/: 2026-07-14_11-23-06_y2.txt  2026-07-14_11-27-40_y2.txt  2026-07-14_11-28-23_y1.txt  2026-07-14_11-28-48_x2.txt  2026-07-14_11-29-09_x1.txt  2026-07-14_11-35-39_x1_att.txt  2026-07-14_11-36-02_x2_att.txt  2026-07-14_11-36-21_y1_att.txt  2026-07-14_11-36-38_y2_att.txt
rutinas/: BasicMachineInteraction.ipynb  BasicOrigin.txt  MapMovimientoPosiciones.py  movPosicionesRepeat.py  movimientoPosiciones.py  (+4 more)
(+43 files in other folders)
