[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SSHex"
version = "0.1.0"
description = "Plantilla de proyecto."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pythonnet>=3.1.0",
    "matplotlib>=3.10.8",
    "plotly>=6.0.0",
    "pyusb>=1.3.1",
    "pyvisa-py>=0.8.1",
    "libusb-package>=1.0.26.3",
]

[dependency-groups]
dev = [
    "ipykernel",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pic_upv = ["dlls/*.dll"]
